--- a/PotatoMixer/src/main/resources/fxml/PlayerScene.fxml
+++ b/PotatoMixer/src/main/resources/fxml/PlayerScene.fxml
@@ -15,29 +15,34 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane prefHeight="154.0" prefWidth="412.0" style="-fx-background-color: #CCFFFF; -fx-border-radius: 20;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.PlayerSceneFXMLController">
+
+<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.PlayerSceneFXMLController">
    <children>
-      <Label fx:id="titleLabel" layoutX="14.0" layoutY="31.0" prefHeight="43.0" prefWidth="337.0" text="Label">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Button id="PlayBTN" fx:id="playpauseBTN" layoutX="14.0" layoutY="79.0" mnemonicParsing="false" onAction="#handlePlayPauseBTN" text="Play/Pause" />
-      <Button id="stopBTN" fx:id="stopBTN" layoutX="95.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleStopBTN" text="Stop" />
-      <Button fx:id="fileBtn" layoutX="312.0" layoutY="125.0" mnemonicParsing="false" onAction="#handleFilePicker" text="File" />
-      <Slider id="volumeSlider" fx:id="volumeSlider" blockIncrement="1.0" layoutX="366.0" layoutY="4.0" orientation="VERTICAL" prefHeight="140.0" prefWidth="40.0" showTickLabels="true" showTickMarks="true" value="100.0" />
-      <Label id="testLabel" fx:id="timeLabel" layoutX="270.0" layoutY="75.0" prefHeight="34.0" prefWidth="95.0" text="Label">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <CheckBox fx:id="isLoop" layoutX="144.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Loop" />
-      <CheckBox fx:id="isFadeOut" layoutX="196.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Fade out" />
-      <Label fx:id="artistLabel" layoutX="15.0" layoutY="4.0" prefHeight="43.0" prefWidth="337.0" text="Label">
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Slider fx:id="progressSlider" blockIncrement="0.0" layoutX="14.0" layoutY="109.0" max="0.0" prefHeight="16.0" prefWidth="337.0" />
+      <Pane prefHeight="154.0" prefWidth="412.0" style="-fx-background-color: #CCFFFF; -fx-border-radius: 20;">
+         <children>
+            <Label fx:id="titleLabel" layoutX="14.0" layoutY="31.0" prefHeight="43.0" prefWidth="337.0" text="Label">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Button id="PlayBTN" fx:id="playpauseBTN" layoutX="14.0" layoutY="79.0" mnemonicParsing="false" onAction="#handlePlayPauseBTN" text="Play/Pause" />
+            <Button id="stopBTN" fx:id="stopBTN" layoutX="95.0" layoutY="79.0" mnemonicParsing="false" onAction="#handleStopBTN" text="Stop" />
+            <Button fx:id="fileBtn" layoutX="312.0" layoutY="125.0" mnemonicParsing="false" onAction="#handleFilePicker" text="File" />
+            <Slider id="volumeSlider" fx:id="volumeSlider" blockIncrement="1.0" layoutX="366.0" layoutY="4.0" orientation="VERTICAL" prefHeight="140.0" prefWidth="40.0" showTickLabels="true" showTickMarks="true" value="100.0" />
+            <Label id="testLabel" fx:id="timeLabel" layoutX="270.0" layoutY="75.0" prefHeight="34.0" prefWidth="95.0" text="Label">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <CheckBox fx:id="isLoop" layoutX="144.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="52.0" text="Loop" />
+            <CheckBox fx:id="isFadeOut" layoutX="196.0" layoutY="79.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="89.0" text="Fade out" />
+            <Label fx:id="artistLabel" layoutX="15.0" layoutY="4.0" prefHeight="43.0" prefWidth="337.0" text="Label">
+               <font>
+                  <Font size="16.0" />
+               </font>
+            </Label>
+            <Slider fx:id="progressSlider" blockIncrement="0.0" layoutX="14.0" layoutY="109.0" max="0.0" prefHeight="16.0" prefWidth="337.0" />
+         </children>
+      </Pane>
    </children>
-</Pane>
+</AnchorPane>
