--- a/PotatoMixer/src/main/resources/fxml/MainFXML.fxml
+++ b/PotatoMixer/src/main/resources/fxml/MainFXML.fxml
@@ -8,32 +8,35 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="mainAP" prefHeight="750.0" prefWidth="729.0" style="-fx-background-color: #808069;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.MainFXMLController">
+<AnchorPane fx:id="mainAP" prefHeight="750.0" prefWidth="800.0" style="-fx-background-color: #808069;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.controller.MainFXMLController">
     <children>
-        <AnchorPane prefHeight="750.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="232.0" AnchorPane.topAnchor="0.0">
+        <AnchorPane prefHeight="750.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="255.0" AnchorPane.topAnchor="0.0">
             <children>
-                <AnchorPane prefHeight="675.0" prefWidth="497.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <AnchorPane prefHeight="675.0" prefWidth="497.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="673.0" prefWidth="350.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="551.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
-                        <VBox fx:id="leftPane" prefHeight="673.0" prefWidth="483.0">
+                        <VBox fx:id="leftPane" prefHeight="673.0" prefWidth="536.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <padding>
-                              <Insets left="5.0" right="5.0" />
+                              <Insets bottom="5.0" top="5.0" />
                            </padding>
+                           <opaqueInsets>
+                              <Insets bottom="3.0" />
+                           </opaqueInsets>
                         </VBox>
                      </content></ScrollPane>
                     </children>
                 </AnchorPane>
-                <AnchorPane layoutY="675.0" prefHeight="53.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0">
+                <AnchorPane id="bottomPanel" fx:id="bottomPanel" layoutY="675.0" prefHeight="53.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <children>
                         <VBox layoutX="16.0" layoutY="-1.0" prefHeight="54.0" prefWidth="457.0">
                             <children>
                                 <Slider id="progressSlider" fx:id="progressSlider" prefHeight="14.0" prefWidth="335.0" />
                                 <ToolBar layoutY="-35.0" prefHeight="40.0" prefWidth="350.0" style="-fx-background-color: none;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <items>
-                                        <Button mnemonicParsing="false" text="Play/pause" />
-                                        <Button layoutX="10.0" layoutY="30.0" mnemonicParsing="false" text="Stop" />
-                                        <Button layoutX="66.0" layoutY="30.0" mnemonicParsing="false" text="Next" />
+                                        <Button mnemonicParsing="false" onAction="#handlePlayPause" text="Play/pause" />
+                                        <Button layoutX="10.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleStop" text="Stop" />
+                                        <Button layoutX="66.0" layoutY="30.0" mnemonicParsing="false" onAction="#handlePlayNext" text="Next" />
                                         <Label fx:id="timeLabel" text="00:00/00:00">
                                             <font>
                                                 <Font size="16.0" />
@@ -48,9 +51,9 @@
                 </AnchorPane>
             </children>
         </AnchorPane>
-        <AnchorPane fx:id="rightAP" layoutX="497.0" layoutY="192.0" prefHeight="750.0" prefWidth="232.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="497.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <AnchorPane fx:id="rightAP" layoutX="550.0" layoutY="192.0" prefHeight="750.0" prefWidth="256.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="550.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <ScrollPane hbarPolicy="NEVER" prefHeight="750.0" prefWidth="256.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                <ScrollPane hbarPolicy="NEVER" prefHeight="750.0" prefWidth="256.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <content>
                         <VBox fx:id="rightBox" prefHeight="748.0" prefWidth="235.0" spacing="5.0">
                             <children>
@@ -112,7 +115,7 @@
                                         <Insets bottom="3.0" />
                                     </padding>
                                 </HBox>
-                                <HBox fx:id="hLoop2" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#f7f2f2;">
+                                <HBox fx:id="hLoop2" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#EBDFDF;">
                                     <children>
                                         <Button fx:id="playLoop2" disable="true" mnemonicParsing="false" onAction="#handleLoopPlay" prefHeight="102.0" prefWidth="106.0" style="-fx-background-color: #A9A9A9;">
                                             <HBox.margin>
@@ -224,7 +227,7 @@
                                         <Insets bottom="3.0" />
                                     </padding>
                                 </HBox>
-                                <HBox fx:id="hLoop4" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#f7f2f2;">
+                                <HBox fx:id="hLoop4" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#EBDFDF;">
                                     <children>
                                         <Button fx:id="playLoop4" disable="true" mnemonicParsing="false" onAction="#handleLoopPlay" prefHeight="102.0" prefWidth="106.0" style="-fx-background-color: #A9A9A9;">
                                             <HBox.margin>
@@ -335,7 +338,7 @@
                                         <Insets bottom="3.0" />
                                     </padding>
                                 </HBox>
-                                <HBox fx:id="hLoop6" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#f7f2f2;">
+                                <HBox fx:id="hLoop6" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#EBDFDF;">
                                     <children>
                                         <Button fx:id="playLoop6" disable="true" mnemonicParsing="false" onAction="#handleLoopPlay" prefHeight="102.0" prefWidth="106.0" style="-fx-background-color: #A9A9A9;">
                                             <HBox.margin>
@@ -445,7 +448,7 @@
                                         <Insets bottom="3.0" />
                                     </padding>
                                 </HBox>
-                                <HBox fx:id="hLoop8" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#f7f2f2;">
+                                <HBox fx:id="hLoop8" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color:#EBDFDF;">
                                     <children>
                                         <Button fx:id="playLoop8" disable="true" mnemonicParsing="false" onAction="#handleLoopPlay" prefHeight="102.0" prefWidth="106.0" style="-fx-background-color: #A9A9A9;">
                                             <HBox.margin>
