--- a/PotatoMixer/src/main/resources/fxml/MainFXML.fxml
+++ b/PotatoMixer/src/main/resources/fxml/MainFXML.fxml
@@ -8,15 +8,15 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="mainAP" prefHeight="750.0" prefWidth="800.0" style="-fx-background-color: #808069;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.controller.MainFXMLController">
+<AnchorPane fx:id="mainAP" prefHeight="718.0" prefWidth="806.0" style="-fx-background-color: #808069;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.ivandrew.potatomixer.controller.MainFXMLController">
     <children>
         <AnchorPane prefHeight="750.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="255.0" AnchorPane.topAnchor="0.0">
             <children>
                 <AnchorPane prefHeight="675.0" prefWidth="497.0" AnchorPane.bottomAnchor="75.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                     <children>
-                        <ScrollPane fitToHeight="true" hbarPolicy="NEVER" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="551.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <ScrollPane fitToHeight="true" fitToWidth="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="675.0" prefWidth="551.0" vbarPolicy="ALWAYS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <content>
-                        <VBox fx:id="leftPane" prefHeight="673.0" prefWidth="536.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                        <VBox fx:id="leftPane" maxWidth="1.7976931348623157E308" prefHeight="673.0" prefWidth="536.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <padding>
                               <Insets bottom="5.0" top="5.0" />
                            </padding>
@@ -29,10 +29,10 @@
                 </AnchorPane>
                 <AnchorPane id="bottomPanel" fx:id="bottomPanel" layoutY="675.0" prefHeight="53.0" prefWidth="497.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
                     <children>
-                        <VBox layoutX="16.0" layoutY="-1.0" prefHeight="54.0" prefWidth="457.0">
+                        <VBox layoutX="16.0" layoutY="-3.0" prefHeight="65.0" prefWidth="457.0">
                             <children>
                                 <Slider id="progressSlider" fx:id="progressSlider" prefHeight="14.0" prefWidth="335.0" />
-                                <ToolBar layoutY="-35.0" prefHeight="40.0" prefWidth="350.0" style="-fx-background-color: none;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+                                <ToolBar layoutY="-35.0" prefHeight="28.0" prefWidth="457.0" style="-fx-background-color: none;" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
                                     <items>
                                         <Button mnemonicParsing="false" onAction="#handlePlayPause" text="Play/pause" />
                                         <Button layoutX="10.0" layoutY="30.0" mnemonicParsing="false" onAction="#handleStop" text="Stop" />
